Tests, logging, new endpoints